# nlm-ingestor

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Jenkinsfile  Makefile  NOTICE.txt  README.md  kustomization.yaml  nohup.out  pull_request_template.md  pyproject.toml  requirements.txt  run.sh  run_prod.sh  setup.py
.github/: pull_request_template.md
.github/workflows/: auto-generate-release.yml  create-major-tag.yml  create-minor-tag.yml  create-patch-tag.yml  deploy-dev.yaml  deploy-prod-az.yaml  docker-publish.yml  docker-test.yml  lint.yml  test.yml
files/html/: EcoScienceSolutionsInc_20180406_8-K_EX-10.1_11135398_EX-10.1_Sponsorship_Agreement.html
files/text/: 8k_baseline.txt  Beyond Examples- High-level Automated Reasoning Paradigm in In-Context Learning via MCTS_baseline.txt  CreditcardscomInc_20070810_S-1_EX-10.33_362297_EX-10.33_Affiliate Agreement_baseline.txt  EcoScienceSolutionsInc_20180406_8-K_EX-10.1_11135398_EX-10.1_Sponsorship_Agreement_baseline.txt  SoupmanInc_20150814_8-K_EX-10.1_9230148_EX-10.1_Franchise Agreement2_baseline.txt  SouthernStarEnergyInc_20051202_SB-2A_EX-9_801890_EX-9_Affiliate Agreement_baseline.txt  credit_aon_baseline.txt  credit_citizens_baseline.txt  primary-document_baseline.txt
jars/: tika-server-config-default.xml
k8s/dev/: values.yaml
k8s/prod/: values.yaml
k8s/prod-az/: values.yaml
nlm_ingestor/file_parser/: __init__.py  file_parser.py  markdown_parser.py  (+2 more)
notebooks/: pdf_visual_ingestor_step_by_step.ipynb  test_llmsherpa_api.ipynb
scripts/: create_ecr.sh  set_aws_profile.sh
tests/: run_ingestor_page_test.py  run_ingestor_table_tests.py  run_ingestor_test_full_doc.py  run_ingestor_tests.py  test_line_parser.py  test_processor.py  test_sent_tokenizer.py
tools/: create_release.sh  semtag
whl/: nlm_utils-0.1.3-py3-none-any.whl  nlm_utils-0.1.4-py3-none-any.whl
(+39 files in other folders)
