[tool.poetry]
name = "nlm-ingestor"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-jsonpify = "^1.5.0"
gunicorn = "^23.0.0"
werkzeug = "^3.0.4"
tika = "^2.6.0"
bs4 = "^0.0.2"
nltk = "3.6.2"
python-magic = "0.4.22"
numpy = "1.24.4"
tqdm = "^4.66.5"
symspellpy = ">=6.7.0"
pandas = ">=1.2.4"
mistune = "2.0.3"
lxml = "4.9.1"
unidecode = "^1.3.8"
nlm-utils = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
