[tool.poetry]
name = "nlm-ingestor"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-jsonpify = "^1.5.0"
gunicorn = "^23.0.0"
werkzeug = "^3.0.4"
tika = "^2.6.0"
bs4 = "^0.0.2"
nltk = "3.6.2"
python-magic = "0.4.22"
numpy = "1.24.4"
tqdm = "^4.66.5"
symspellpy = ">=6.7.0"
pandas = ">=1.2.4"
mistune = "2.0.3"
lxml = "4.9.1"
unidecode = "^1.3.8"
nlm-utils = "^0.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pdfplumber = "^0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Add these new sections
[tool.black]
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true